# tapl-haskell

./: lambda.cabal
lib/: AST.hs  TypeChecker.hs
test/: Main.hs
