cabal-version:      3.0
name:               lambda
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             rbonifacio
maintainer:         rbonifacio123@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  AST, TypeChecker
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.17.2.1, mtl
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite lambda-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.17.2.1,
        lambda,
        mtl,
        HUnit
